--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,6 +161,8 @@ img {
 
 #card-image {
     height: 400px;
+    width: 95%;
+    margin: auto;
     padding: 10px;
 }
 
@@ -271,6 +273,16 @@ p {
 
 #fa-calender {
     margin: 2px;
+}
+
+#user-review {
+    border-top: 1px solid #fafafa;
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
+#edit-btn {
+    margin-top: 10px;
 }
 
 /* ------------------------------------------------------ footer */
