--- a/templates/login.html
+++ b/templates/login.html
@@ -12,18 +12,20 @@
             <div class="card-panel sign-in-card grey darken-4">
                 <!-- username input -->
                 <div class="row">
-                    <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">                        
+                    <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">
+                        <i class="fas fa-user-cog prefix white-text"></i>                       
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="username"><i class="fas fa-user white-text"></i> Username</label>
+                        <label for="username">Username</label>
                     </div>
                 </div>
                 <!-- password input -->
                 <div class="row">
                     <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">
+                        <i class="fas fa-user-lock prefix white-text"></i>
                         <input id="password" name="password"  type="password" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="password"><i class="fas fa-unlock white-text"></i> Password</label>
+                        <label for="password"> Password</label>
                     </div>
                 </div>
                 <!-- submit button -->
