--- a/templates/games.html
+++ b/templates/games.html
@@ -6,28 +6,56 @@
             <h4 class="header white-text">Games</h4>
         </div>
     </div>
-        
+
     <div class="row">
-        <div class="col s12 m10 l10 offset-l1 offset-m1" id="games">
-            {% for game in games %}                
-                
-            <div class="col s12 m6 l4">
-                <div class="card grey darken-4">
-                    <a href="{{ url_for('game', game_id=game._id) }}">
-                        <div class="card-image">
-                            <img src="{{ game.game_url }}">
+        <div class="col s12 m10 offset-m1">
+            <form action="{{ url_for('search') }}" method="POST">
+                <div class="row valign-wrapper center-align">
+                    <div class="input-field col s10 m8 offset-s1 offset-m2">
+                        <i class="fas fa-search prefix white-text"></i>
+                        <input type="text" name="query" id="query" class="white-text validate" required>
+                        <label for="query" class="white-text">Search Games</label>
+                        <div class="col s10 m8 offset-s1 offset-m2">
+                            <a href="{{ url_for('get_games') }}" class="red darken-4 btn-small text-shadow">Reset</a>
+                            <button type="submit" class="red darken-4 btn-small text-shadow">
+                                <i class="fas fa-search white-text"></i> Search
+                            </button>
                         </div>
-                        <div class="card-content white-text">
-                            <p>
-                                {{ game.game_title }}
-                            </p>
-                        </div>
-                    </a>                        
+                    </div>
                 </div>
-            </div>    
-                
-            {% endfor %}
+            </form>
         </div>
-    </div>    
+    </div>
+    
+    {% if games|length > 0 %}
+        <div class="row">
+            <div class="col s12 m10 l10 offset-l1 offset-m1" id="games">
+                {% for game in games %}                
+                    
+                <div class="col s12 m6 l4">
+                    <div class="card grey darken-4">
+                        <a href="{{ url_for('game', game_id=game._id) }}">
+                            <div class="card-image">
+                                <img src="{{ game.game_url }}">
+                            </div>
+                            <div class="card-content white-text">
+                                <p>
+                                    {{ game.game_title }}
+                                </p>
+                            </div>
+                        </a>                        
+                    </div>
+                </div>    
+                    
+                {% endfor %}
+            </div>
+        </div>
+        {% else %}
+        <div class="row">
+            <div class="col s12 center-align">
+                <h4 class="white-text">No results found!</h4>
+            </div>
+        </div>
+    {% endif %}
 
 {% endblock %}
