--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
+
 .text {
     color: #fafafa;
 }
 
 body {
     background-color: #000000;
+    font-family: 'Ropa Sans', sans-serif;
 }
 
 /* --------------------------------------------------- flash messages */
@@ -40,6 +43,10 @@ nav {
 }
 
 /* -------------------------------------------- home page slider imgs */
+.site-title {
+    margin: 10px;
+}
+
 .card 
 .card-action {
     padding: 5px;
@@ -71,15 +78,26 @@ li
 
 /* --------------------------------------------- heading elements */
 .h5 {
-    margin: 5px;
+    margin: 5px 0 5px 0;
 }
 
 h3 {
-    margin: 10px;
+    margin: 10px 0 10px 0;
 }
 
 .header {
-    margin: 20px;
+    margin: 20px auto 20px auto;
+    padding: 15px;
+    text-align: center;
+    height: fit-content;
+    width: 90%;
+}
+
+#header {
+    color: rgba(97, 97, 97, 0.5);
+    font-size: 50px;
+    letter-spacing: 15px;
+    text-transform: uppercase;
 }
 
 p {
