--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -177,8 +177,8 @@
 
 <!-- reviews -->
 <div class="row">
-    <div class="col s12 m10 l8 offset-l2 offset-m1">
-        <h4 class="header white-text">Reviews</h4>
+    <div class="header">
+        <h4 id="header"><strong>Reviews</strong></h4>
     </div>
 </div>
 
