--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
                 <div class="card-action white-text">
-                    <h3 class="game-title">Welcome To Game Review</h3>
+                    <h3 class="site-title">Welcome To Game Review</h3>
                     <p class="site-info white-text">
                         THIS SITE IS DESIGNED FOR PEOPLE WHO LOVE PLAYING
                         VIDEOGAMES. HERE YOU CAN CHECK OUT THE MOST
@@ -59,8 +59,8 @@
     </div>
 
     <div class="row">
-        <div class="col s12 m10 l10 offset-l1 offset-m1">
-            <h4 class="header white-text">Most Popular Games</h4>
+        <div class="header">
+            <h4 id="header"><strong>Most Popular Games</strong></h4>
         </div>
     </div>
 
