--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 {% block content %}
 
     <div class="row">
-        <div class="col s10 m8 l8 offset-s1 offset-l2 offset-m2">
-            <h4 class="header white-text">Log In</h4>
+        <div class="header">
+            <h4 id="header"><strong>Log In</strong></h4>
         </div>
     </div>
 
