--- a/templates/games.html
+++ b/templates/games.html
@@ -39,7 +39,7 @@
                                 <img src="{{ game.game_url }}">
                             </div>
                             <div class="card-content white-text">
-                                <p>
+                                <p class="game-tile-title">
                                     {{ game.game_title }}
                                 </p>
                             </div>
