Add website addreses to footer links

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,16 +95,16 @@
                 <div class="row">
                     <div class="col s12 center-align" id="footer-2">
                         <h5 class="white-text">Links</h5>
-                        <a class="link-1 white-text" href="">
+                        <a class="link-1 white-text" href="https://www.youtube.com/" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a class="link-2 white-text" href="">
+                        <a class="link-2 white-text" href="https://www.twitch.tv/" target="_blank">
                             <i class="fab fa-twitch"></i>
                         </a>
-                        <a class="link-3 white-text" href="">
+                        <a class="link-3 white-text" href="https://store.steampowered.com/" target="_blank">
                             <i class="fab fa-steam"></i>
                         </a>
-                        <a class="link-4 white-text" href="">
+                        <a class="link-4 white-text" href="https://www.facebook.com/gaming/" target="_blank">
                             <i class="fab fa-facebook"></i>
                         </a>
                     </div>
