--- a/templates/errorhandler/404.html
+++ b/templates/errorhandler/404.html
@@ -17,18 +17,18 @@
     {% endblock %}
     <title>Game Review</title>
 </head>
-
 <body>
+
     <div class="row">
         <div class="col s12 m10 l8 offset-l2 offset-m1" id="card">
             <div class="card black">
                 <div class="card-image">
-                    <img id="card-image" src="http://ubiq.co/tech-blog/wp-content/uploads/2020/08/503-service-temporarily-unavailable-nginx.jpg" alt="error 503">
+                    <img id="card-image" src="https://i.redd.it/x1sr1lob3ai41.jpg">
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col s12 center-align">
             <a class="waves-effect waves-light btn-small modal-trigger red darken-4" href="{{ url_for('home') }}" id="btn">
