--- a/templates/games.html
+++ b/templates/games.html
@@ -36,7 +36,7 @@
                     <div class="card grey darken-4">
                         <a href="{{ url_for('game', game_id=game._id) }}">
                             <div class="card-image">
-                                <img src="{{ game.game_url }}">
+                                <img src="{{ game.game_url }}" alt="game title image">
                             </div>
                             <div class="card-content white-text">
                                 <p class="game-tile-title">
