--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,31 @@
                 <div class="slider">
                     <ul class="slides">
                         <li>
-                            <img src="https://static0.gamerantimages.com/wordpress/wp-content/uploads/2021/02/call-of-duty-black-ops-cold-war-trailer-season-2.jpg">
+                            <img src="https://static0.gamerantimages.com/wordpress/wp-content/uploads/2021/02/call-of-duty-black-ops-cold-war-trailer-season-2.jpg" alt="game image">>
                             <div class="caption z-depth-4">
                                 <h5 class="h5 white-text"><strong>Call Of Duty: Warzone</strong></h5>
                             </div>
                         </li>
                         <li>
-                            <img src="https://tech4gamers.com/wp-content/uploads/2020/04/Assassins-Creed-Valhalla-Screenshots-2-scaled.jpg">
-                            <div class="caption caption-2 z-depth-4">
+                            <img src="https://tech4gamers.com/wp-content/uploads/2020/04/Assassins-Creed-Valhalla-Screenshots-2-scaled.jpg" alt="game image">>
+                            <div class="caption caption-2 z-depth-4 center-align">
                                 <h5 class="h5 black-text"><strong>Assasin's Creed Valhalla</strong></h5>
                             </div>
                         </li>
                         <li>
-                            <img src="https://planetsmarts.com/wp-content/uploads/2021/03/Fall-Guys-season-4-travels-to-the-future-in-its.jpg">
+                            <img src="https://planetsmarts.com/wp-content/uploads/2021/03/Fall-Guys-season-4-travels-to-the-future-in-its.jpg" alt="game image">>
                             <div class="caption z-depth-4">
                                 <h5 class="h5"><strong>Fall Guys: Ultimate Knockout</strong></h5>
                             </div>
                         </li>
                         <li>
-                            <img src="https://www.indiewire.com/wp-content/uploads/2020/11/MSM_MilesMorales_PS5_AirTrick.png?w=780">
-                            <div class="caption caption-4 z-depth-4">
-                                <h5 class="h5 white-text center-align"><strong>Spider-Man: Miles Morales</strong></h5>
+                            <img src="https://www.indiewire.com/wp-content/uploads/2020/11/MSM_MilesMorales_PS5_AirTrick.png?w=780" alt="game image">>
+                            <div class="caption caption-2 z-depth-4 center-align">
+                                <h5 class="h5 white-text"><strong>Spider-Man: Miles Morales</strong></h5>
                             </div>
                         </li>
                         <li>
-                            <img src="https://venturebeat.com/wp-content/uploads/2018/10/red-dead-8.jpg?w=1200&strip=all">
+                            <img src="https://venturebeat.com/wp-content/uploads/2018/10/red-dead-8.jpg?w=1200&strip=all" alt="game image">
                             <div class="caption z-depth-4">
                                 <h5 class="h5"><strong>Red Dead Redemption 2</strong></h5>
                             </div>
@@ -70,7 +70,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://cdn1.dotesports.com/wp-content/uploads/2021/06/14121316/codwz25.jpg">
+                        <img src="https://cdn1.dotesports.com/wp-content/uploads/2021/06/14121316/codwz25.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#1</h2>
@@ -84,7 +84,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://ph-live-01.slatic.net/p/4c96b845db6fe5e1b64335b0d9f69790.png" alt="game image">
+                        <img src="https://ph-live-01.slatic.net/p/4c96b845db6fe5e1b64335b0d9f69790.png"  alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#2</h2>
@@ -98,7 +98,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://staticg.sportskeeda.com/editor/2021/07/ca79c-16269473365552-800.jpg">
+                        <img src="https://staticg.sportskeeda.com/editor/2021/07/ca79c-16269473365552-800.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#3</h2>
@@ -112,7 +112,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://www.trustedreviews.com/wp-content/uploads/sites/54/2014/11/GTA-5-1.jpg">
+                        <img src="https://www.trustedreviews.com/wp-content/uploads/sites/54/2014/11/GTA-5-1.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#4</h2>
@@ -126,7 +126,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://cdn1.dotesports.com/wp-content/uploads/2019/09/12195522/league-of-legends.jpg">
+                        <img src="https://cdn1.dotesports.com/wp-content/uploads/2019/09/12195522/league-of-legends.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#5</h2>
@@ -140,7 +140,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://www.theicon.com/wp-content/uploads/2021/05/valorant-logo-characters-red-pink-PC.jpg">
+                        <img src="https://www.theicon.com/wp-content/uploads/2021/05/valorant-logo-characters-red-pink-PC.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#6</h2>
