Add styling to sidenav. Add meta description

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,12 @@ nav {
     text-decoration: underline;
 }
 
+/* -------------------------------------------- side nav */
+.sidenav li > a {
+    font-size: 22px;
+    text-align: center;
+}
+
 /* -------------------------------------------- home page slider imgs */
 .site-title {
     margin: 10px;
