--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://cdn1.dotesports.com/wp-content/uploads/2021/06/14121316/codwz25.jpg" alt="game image">
+                        <img src="https://static1.colliderimages.com/wordpress/wp-content/uploads/2021/04/CALL-OF-DUTY.png" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#1</h2>
@@ -112,7 +112,7 @@
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
                     <div class="card-image">
-                        <img src="https://www.trustedreviews.com/wp-content/uploads/sites/54/2014/11/GTA-5-1.jpg" alt="game image">
+                        <img src="https://compass-ssl.xbox.com/assets/a0/4f/a04f2744-74d9-4668-8263-e0261fbea869.jpg?n=GTA-V_GLP-Page-Hero-1084_1920x1080.jpg" alt="game image">
                     </div>
                     <div class="card-content white-text">
                         <h2 class="blue-grey-text darken-4">#4</h2>
