--- a/templates/games.html
+++ b/templates/games.html
@@ -16,8 +16,8 @@
                         <input type="text" name="query" id="query" class="white-text validate" required>
                         <label for="query" class="white-text">Search Games</label>
                         <div class="col s10 m8 offset-s1 offset-m2">
-                            <a href="{{ url_for('get_games') }}" class="red darken-4 btn-small">Reset</a>
-                            <button type="submit" class="red darken-4 btn-small">
+                            <a href="{{ url_for('get_games') }}" class="red darken-4 btn-small search-btn">Reset</a>
+                            <button type="submit" class="red darken-4 btn-small search-btn">
                                 <i class="fas fa-search white-text"></i> Search
                             </button>
                         </div>
