Add margin to search function buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,6 +131,7 @@ a {
 /* ----------------------------------------------- games page / game cards */
 .search-btn {
     border-radius: 12px;
+    margin: 5px;
 }
 
 .game-container {
