--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -153,7 +153,7 @@
                         </form>
 
                         <div class="modal-footer grey darken-4">
-                            <a href="#!" class="modal-close waves-effect waves-light btn-small red darken-4">Close</a>
+                            <a href="#!" class="modal-close waves-effect waves-light btn-small red darken-4" id="btn">Close</a>
                         </div>
 
                     </div>
