--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,13 @@
                         POPULAR AND ROCOMMENDED GAMES,
                         BY YOU! ARE IN THE WORLD RIGHT NOW!
                     </p>
+                    <p>
+                        WHY NOT REGISTER AN ACCOUNT WITH US TODAY
+                        AND START LEAVING REVIEWS ON YOUR
+                        FAVOURITE GAMES, SHARE TIPS AND
+                        TRICKS YOU MAY HAVE AND CONNECT TO OTHER
+                        GAMERS WITHIN THE COMMUNITY!
+                    </p>
                     <div class="row center-align">
                         <a class="btn waves-effect red darken-4 register-btn" href="{{ url_for('register') }}" type="submit"
                           name="action">
