Change background color to game-card information

--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -26,7 +26,7 @@
 
                 <div class="game-info">
                     <div class="row">
-                        <div class="col s10 m6 l6 offset-s1 offset-m1 offset-l1 blue-grey darken-4" id="game-info">
+                        <div class="col s10 m6 l6 offset-s1 offset-m1 offset-l1 red darken-3" id="game-info">
                             <i class="fas fa-tools white-text"></i>
                             <p>
                                 <strong>Developers:</strong> {{ game.game_developers }}
@@ -41,13 +41,13 @@
                     </div>
 
                     <div class="row">
-                        <div class="col s10 m4 l4 offset-s1 offset-m1 offset-l1 red lighten-1" id="game-info">
+                        <div class="col s10 m4 l4 offset-s1 offset-m1 offset-l1 red darken-3" id="game-info">
                             <i class="fas fa-users white-text"></i>
                             <p>
                                 <strong>{{ game.num_of_players }}</strong>
                             </p>
                         </div>
-                        <div class="col s10 m6 l6 offset-s1 black" id="game-info">
+                        <div class="col s10 m6 l6 offset-s1 red darken-3" id="game-info">
                             <i class="fas fa-theater-masks white-text"></i>
                             <p>
                                 <strong>Genre: {{ game.game_genre }}</strong>
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1 blue darken-4" id="game-info">
+                        <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1 red darken-3" id="game-info">
                             <i class="fas fa-gamepad white-text"></i>
                             <p>
                                 <strong>Platforms:</strong> {{ game.game_platforms }}
