Bug fix site introduction text

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,7 @@
                     <p class="site-info white-text">
                         THIS SITE IS DESIGNED FOR PEOPLE WHO LOVE PLAYING
                         VIDEOGAMES. HERE YOU CAN CHECK OUT THE MOST
-                        POPULAR AND ROCOMMENDED GAMES,
-                        BY YOU! ARE IN THE WORLD RIGHT NOW!
+                        POPULAR GAMES IN THE WORLD RECOMMENDED BY YOU!
                     </p>
                     <p>
                         WHY NOT REGISTER AN ACCOUNT WITH US TODAY
@@ -54,7 +53,7 @@
                         GAMERS WITHIN THE COMMUNITY!
                     </p>
                     <div class="row center-align">
-                        <a class="btn waves-effect red darken-4 register-btn" href="{{ url_for('register') }}" type="submit"
+                        <a class="btn red darken-4 register-btn" href="{{ url_for('register') }}" type="submit"
                           name="action">
                           Register
                           <i class="fas fa-file-signature right"></i>
@@ -162,7 +161,7 @@
     </div>
 
     <div class="row center-align" id="btn">
-        <a href="{{ url_for('get_games') }}" class="btn waves-effect red darken-4 more-games-btn" type="submit">
+        <a href="{{ url_for('get_games') }}" class="btn red darken-4 more-games-btn" type="submit">
             More Games
             <i class="fas fa-forward white-text right"></i>
         </a>
