--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -332,7 +332,7 @@
 
 <div class="row center-align">
     <div class="col s12">
-        <a class="btn waves-effect red darken-3 back-btn"  href="{{ url_for('get_games') }}" type="submit" name="action">
+        <a class="btn red darken-3 back-btn"  href="{{ url_for('get_games') }}" type="submit" name="action">
             <i class="fas fa-backward white-text left"></i> Back        
         </a>
     </div>
