--- a/templates/index.html
+++ b/templates/index.html
@@ -40,18 +40,18 @@
                 </div>
                 <div class="card-action white-text">
                     <h3 class="site-title">Welcome To Game Review</h3>
-                    <p class="site-info white-text">
+                    <h5 class="site-info white-text">
                         THIS SITE IS DESIGNED FOR PEOPLE WHO LOVE PLAYING
                         VIDEOGAMES. HERE YOU CAN CHECK OUT THE MOST
                         POPULAR GAMES IN THE WORLD RECOMMENDED BY YOU!
-                    </p>
-                    <p>
+                    </h5>
+                    <h5 class="site-info white-text">
                         WHY NOT REGISTER AN ACCOUNT WITH US TODAY
                         AND START LEAVING REVIEWS ON YOUR
                         FAVOURITE GAMES, SHARE TIPS AND
                         TRICKS YOU MAY HAVE AND CONNECT TO OTHER
                         GAMERS WITHIN THE COMMUNITY!
-                    </p>
+                    </h5>
                     <div class="row center-align">
                         <a class="btn red darken-4 register-btn" href="{{ url_for('register') }}" type="submit"
                           name="action">
